[gd_scene load_steps=2 format=3 uid="uid://drfwxs8kda23m"]

[ext_resource type="Script" path="res://ui/custom_nodes/TaskAllocator.gd" id="1_7vcbx"]

[node name="TaskAllocator" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_7vcbx")

[node name="TaskNameLabel" type="Label" parent="."]
layout_mode = 2
text = "Task Name"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="SubtractLaborButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "-"

[node name="LaborAllocatedLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "0/5"

[node name="AddLaborButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "+"

[connection signal="pressed" from="HBoxContainer/SubtractLaborButton" to="." method="_on_subtract_labor_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AddLaborButton" to="." method="_on_add_labor_button_pressed"]
